--- a/login.html
+++ b/login.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDoList - Iniciar Sesión</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login y Registro de Usuarios</title>
+  <link rel="stylesheet" href="styles/login.css">
+  <script type="module" src="firebase-connection.js"></script>
 </head>
 <body>
-    <header>
-        <h1>ToDoList</h1>
-        <nav>
-            <ul>
-                <!-- El enlace a index.html se activará después de iniciar sesión -->
-            </ul>
-        </nav>
-    </header>
-
-    <section class="login-form">
-        <h2>Iniciar Sesión</h2>
-        <form id="loginForm" action="#">
-            <label for="username">Nombre de Usuario:</label>
-            <input type="text" id="username" name="username" required>
-
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-
-            <button type="submit">Iniciar Sesión</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 ToDoList. Todos los derechos reservados.</p>
-    </footer>
-
-    <script src="login.js"></script>
+  <div class="container">
+    <div class="login-section">
+      <h2>Iniciar Sesión</h2>
+      <form id="loginForm">
+        <label for="loginEmail">Correo Electrónico:</label>
+        <input type="email" id="loginEmail" required>
+        <label for="loginPassword">Contraseña:</label>
+        <input type="password" id="loginPassword" required>
+        <button type="submit">Iniciar Sesión</button>
+      </form>
+      <p id="loginError" class="error-message"></p>
+    </div>
+    <div class="register-section">
+      <h2>Registrarse</h2>
+      <form id="registerForm">
+        <label for="registerEmail">Correo Electrónico:</label>
+        <input type="email" id="registerEmail" required>
+        <label for="registerUsername">Nombre de Usuario:</label>
+        <input type="text" id="registerUsername" required>
+        <label for="registerPassword">Contraseña:</label>
+        <input type="password" id="registerPassword" required>
+        <button type="submit">Registrarse</button>
+      </form>
+      <p id="registerError" class="error-message"></p>
+    </div>
+  </div>
 </body>
 </html>
-
