autenticacion de inicio de sesion

--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
     <div class="login-section">
       <h2>Iniciar Sesión</h2>
       <form id="loginForm">
-        <label for="loginEmail">Correo Electrónico:</label>
-        <input type="email" id="loginEmail" required>
+        <label for="loginEmail">Nombre de Usuario:</label>
+        <input type="text" id="loginUsername" required>
         <label for="loginPassword">Contraseña:</label>
         <input type="password" id="loginPassword" required>
         <button type="submit">Iniciar Sesión</button>
