--- a/login.html
+++ b/login.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login y Registro de Usuarios</title>
+  <title>TareaZen</title>
+  <link rel="icon" href="images/icono.jpg" type="image/png">
   <link rel="stylesheet" href="styles/login.css">
   <script type="module" src="firebase-connection.js"></script>
 </head>
