--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
   <title>TareaZen</title>
   <link rel="icon" href="images/icono.jpg" type="image/png">
   <link rel="stylesheet" href="styles/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  
 </head>
 <body>
 
-<nav>
-  <ul>
-    <li><a href="index.html">Tareas</a></li>
-    <li><a href="#">Reportes</a></li>
-    <li><a href="login.html">Cerrar Sesión</a></li>
-  </ul>
-</nav>
+    <nav class="navbar">
+        <div class="navbar-left">
+          <img src="images/icono.jpg" alt="Logo de TareaZen">
+          <h2>TareaZen</h2>
+        </div>
+        <ul class="navbar-right">
+          <li><a href="index.html">Tareas</a></li>
+          <li><a href="#">Reportes</a></li>
+          <li><a href="login.html">Cerrar Sesión</a></li>
+        </ul>
+      </nav>
+      
 
 <table id="task-table">
   <thead>
