--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <title>TareaZen</title>
   <link rel="icon" href="images/icono.jpg" type="image/png">
   <link rel="stylesheet" href="styles/login.css">
-  <script type="module" src="firebase-connection.js"></script>
+  <script type="module" src="js/firebase-connection.js"></script>
 </head>
 <body>
   <div class="container">
