--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>TareaZen</title>
   <link rel="icon" href="images/icono.jpg" type="image/png">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Madimi+One&display=swap" rel="stylesheet">
   <script type="module" src="js/tasks.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -18,7 +21,7 @@
       </div>
       <ul class="navbar-right">
         <li><a href="index.html">Tareas</a></li>
-        <li><a href="#">Reportes</a></li>
+        <!--<li><a href="#">Reportes</a></li>-->
         <li><a href="login.html">Cerrar Sesión</a></li>
       </ul>
     </nav>
